webui/src/components/TableTopGame.module.scss
@import "../styles/breakpoints.scss";

.playerRows {
  flex: 3;
  overflow-y: auto;

  @include md {
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    max-width: 1000px;
    align-content: flex-start;
    align-items: flex-start;
  }
}

.actionContainer {
  padding: 1rem;
  background-color: #eee;
  border-top: 1px solid #ddd;
}

.messageContainer {
  flex: 1;
  overflow-y: auto;
  background-color: #ddd;
}

